<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_pemdas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pemdas.math.pemdasgame.selectPEMDASActivity"
    android:background="#000">

    <ToggleButton
        android:textOn="@string/E"
        android:textOff="@string/E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonE"
        android:layout_alignTop="@+id/toggleButtonP"
        android:layout_centerHorizontal="true"/>
        <!--android:textColor="#FFFF"
        //android:background="@drawable/text_box_background"-->

    <ToggleButton
        android:textOn="@string/D"
        android:textOff="@string/D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonD"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_marginTop="63dp"
        android:onClick="startPEMDASGame"
        android:layout_below="@+id/toggleButtonD"
        android:layout_alignLeft="@+id/toggleButtonE"
        android:layout_alignStart="@+id/toggleButtonE" />

    <ToggleButton
        android:textOn="@string/S"
        android:textOff="@string/S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonS"
        android:layout_above="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:textOn="@string/A"
        android:textOff="@string/A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonA"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/toggleButtonE"
        android:layout_alignStart="@+id/toggleButtonE" />

    <ToggleButton
        android:textOn="@string/P"
        android:textOff="@string/P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonP"
        android:layout_above="@+id/toggleButtonD"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp" />

    <ToggleButton
        android:textOn="@string/M"
        android:textOff="@string/M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButtonM"
        android:layout_alignBaseline="@+id/toggleButtonE"
        android:layout_alignBottom="@+id/toggleButtonE"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
