<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pemdas.math.pemdasgame.MainMenuActivity"
    android:background="#000">


    <Button
        android:text="@string/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="openOptionsActivity"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="startSettingsActivity"
        android:layout_marginBottom="77dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/howToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="34dp"
        android:onClick="openHowToPlayActivity"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_toStartOf="@+id/button"
        android:id="@+id/textView2"
        android:layout_below="@+id/helloWorld" />


</RelativeLayout>
