<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_active_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pemdas.math.pemdasgame.ActiveGameActivity"
    android:background="#000">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:navigationIcon="?attr/homeAsUpIndicator" />

    <TextView
        android:text="@string/equationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEquation"
        android:textSize="50dp"
        android:layout_marginTop="55dp"
        android:textColor="#FFFF"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/submitAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:layout_below="@+id/editAnswerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890"
        android:ems="10"
        android:id="@+id/editAnswerText"
        android:hint="@string/typeAnswer"
        android:textColorHint="#FFFF"
        android:textColor="#FFFF"
        android:textAlignment="center"
        android:background="@drawable/text_box_background"
        android:padding="2dp"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/textViewEquation"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"/>

</RelativeLayout>
